[package]
name = "myna-utils"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
authors = ["metastable-void"]
repository = "https://github.com/metastable-void/myna-utils"
description = "Japanese Individual Number enumerator"
homepage = "https://github.com/metastable-void/myna-utils"

[dependencies]
hmac = "0.12.1"
sha2 = "0.10.8"
